--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <hr>
         <input type="radio" name="q34" value="c">c- Emplea el uso de antenas RTTK
         <hr>
-        <input type="radio" name="q34" value="d">c- a y b son correctas
+        <input type="radio" name="q34" value="d">d- a y b son correctas
       </div>
        <div class="borde">
          <h4>35- ¿Cúales son las características de la técnica "Navegación" en posicionamiento por satélite</h4>
