--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <input type="radio" name="q29" value="c">c- a y b son correctas
     </div>
     <div class="borde">
-      <h4>30- ¿En qué consiste el "Posicionamiento Relativo"?</h4>
+      <h4>30- ¿Cúales son las características del "Posicionamiento Relativo"?</h4>
       <hr>
       <input type="radio" name="q30" value="a">a- Se utilizan 2 receptores y se realizan 2 mediciones "Código y Fase" a los mismos satélites simultáneamente en 2 sitios
       <hr>
