--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
     </div>
     <div class="borde">
       <h4>5- Entre 2005 y 2008 fueron lanzados 2 satélites experimentales GIOVE-A y GIOVE-B "Galileo In-Orbit Validation", ¿Cúal fúe el propósito de su misión?</h4>
-      <input type="radio" name="q5" value="a">a- Asegurar y mantener la frecuencia GALILEO con la Unión Internacional de Telecomunicaciones "ITU"
+      <input type="radio" name="q5" value="a">a- Asegurar los objetivos de la misión y mantener la frecuencia GALILEO con la Unión Internacional de Telecomunicaciones "ITU"
       <hr>
       <input type="radio" name="q5" value="b">b- Validar las tecnologías que empleará la constelación GALILEO
       <hr>
       <input type="radio" name="q5" value="c">c- Monitorear el entorno "MEO"
       <hr>
-      <input type="radio" name="q5" value="d">d- Generar señales GALILEO para poder desarrollar el Segmento Usuario. Ambos satélites fueron construidos en paralelo para proporcionar redundancia en la órbita, Asegurar los objetivos de la misión y Proporcionar capacidades complementarias.
+      <input type="radio" name="q5" value="d">d- Generar señales GALILEO para poder desarrollar el Segmento Usuario. Ambos satélites fueron construidos en paralelo para proporcionar redundancia en la órbita y Proporcionar capacidades complementarias.
       <hr>
       <input type="radio" name="q5" value="e">e- Todas las alternativas son correctas 
     </div>
