--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
       <input type="radio" name="q4" value="c">c- Con la Antena se puede, el Receptor entrega Código y la Antena provee de Observable de Fase al Receptor
     </div>
     <div class="borde">
-      <h4>5- Entre 2005 y 2008 fueron lanzados 2 satélites experimentales GIOVE-A y GIOVE-B "Galileo In-Orbit Validation", ¿Cúal fúe el propósito de su misión?</h4>
+      <h4>5- Entre 2005 y 2008 fueron lanzados 2 satélites experimentales GIOVE-A y GIOVE-B "Galileo In-Orbit Validation", ¿Cúal fué el propósito de su misión?</h4>
       <input type="radio" name="q5" value="a">a- Asegurar los objetivos de la misión y mantener la frecuencia GALILEO con la Unión Internacional de Telecomunicaciones "ITU"
       <hr>
       <input type="radio" name="q5" value="b">b- Validar las tecnologías que empleará la constelación GALILEO
       <hr>
-      <input type="radio" name="q5" value="c">c- Monitorear el entorno "MEO"
+      <input type="radio" name="q5" value="c">c- Ambos satélites fueron construidos en paralelo para proporcionar redundancia en la órbita y Monitorear el entorno "MEO"
       <hr>
-      <input type="radio" name="q5" value="d">d- Generar señales GALILEO para poder desarrollar el Segmento Usuario. Ambos satélites fueron construidos en paralelo para proporcionar redundancia en la órbita y Proporcionar capacidades complementarias.
+      <input type="radio" name="q5" value="d">d- Generar señales GALILEO para poder desarrollar el Segmento Usuario.  y Proporcionar capacidades complementarias.
       <hr>
       <input type="radio" name="q5" value="e">e- Todas las alternativas son correctas 
     </div>
