--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
       <hr>
       <input type="radio" name="q4" value="b">b- No se pueden realizar mediciones de Fase con el Receptor y la Antena
       <hr>
-      <input type="radio" name="q4" value="c">c- Con la Antena se puede, el Receptor entrega Código y la Antena provee
-      de Observable de Fase al Receptor
+      <input type="radio" name="q4" value="c">c- Con la Antena se puede, el Receptor entrega Código y la Antena provee de Fase al Receptor
     </div>
     <div class="borde">
       <h4>5- Entre 2005 y 2008 fueron lanzados 2 satélites experimentales GIOVE-A y GIOVE-B "Galileo In-Orbit
@@ -98,7 +97,7 @@
       <h4>8- ¿Se puede realizar una Planificación GNSS de horizonte GNSS sin acceso alguno a internet en toda la Fase de
         Planificación?</h4>
       <hr>
-      <input type="radio" name="q8" value="a">a- Si claro, se saca el Receptor y se actualiza y descarga el Almanaque
+      <input type="radio" name="q8" value="a">a- Si claro, se saca el Receptor y se actualiza el Almanaque
       <hr>
       <input type="radio" name="q8" value="b">b- Es posible mediante el uso de la Antena y descargando efemérides
       ultrarápidas
@@ -134,7 +133,7 @@
       <input type="radio" name="q11" value="c">c- En centímetros de acuerdo al filtro de protones atmosféricos
     </div>
     <div class="borde">
-      <h4>12- ¿Cúales son los tipos de archivos RINEX que tiene vigente el IGS en la versión 3.03 Rinex?</h4>
+      <h4>12- ¿Cúales son los tipos de archivos RINEX que tiene vigente el IGS en la versión Rinex 3?</h4>
       <hr>
       <input type="radio" name="q12" value="a">a- Topografía, Espacial, Observable
       <hr>
@@ -176,7 +175,7 @@
     <div class="borde">
       <h4>16- ¿Qué problema presentaba el uso de la "técnica-óptica"?</h4>
       <hr>
-      <input type="radio" name="q16" value="a">a- Un cielo claro simultáneamente en un mínimo de 2 sitios de observación
+      <input type="radio" name="q16" value="a">a- Conseguir un cielo claro simultáneamente en 2 sitios de observación
       separados por algunos km
       <hr>
       <input type="radio" name="q16" value="b">b- El Equipamiento era enorme y costoso
@@ -238,7 +237,7 @@
     <div class="borde">
       <h4>22- ¿Cúales eran los problemas de los primeros sistemas satelitales?</h4>
       <hr>
-      <input type="radio" name="q22" value="a">a- Grandes brechas de tiempo entre 2 pasadas por el mismo lugar
+      <input type="radio" name="q22" value="a">a- Grandes brechas de tiempo entre 2 pasadas del satélite por el mismo lugar
       <hr>
       <input type="radio" name="q22" value="b">b- Baja precisión de navegación, en particular la determinación era pobre
       <hr>
@@ -256,20 +255,19 @@
       <input type="radio" name="q23" value="c">c- a y b son correctas
     </div>
     <div class="borde">
-      <h4>24- ¿Qué contiene el "Almanaque"?</h4>
+      <h4>24- ¿Cúales son las características del "Almanaque"?</h4>
       <hr>
-      <input type="radio" name="q24" value="a">a- Información sobre el estado del GNSS y datos a los usuarios
+      <input type="radio" name="q24" value="a">a- Permite el cálculo de la posición de todos los satélites de la constelación con una exactitud reducida de 1 a 2 kms
       <hr>
       <input type="radio" name="q24" value="b">b- Contiene el estado de la constelación, cortes programados y datos
-      orbitales adecuados para hacer predicciones de visibilidad del satélite y efemérides precisas adecuadas para
-      posicionamientos precisos
+      orbitales adecuados para hacer predicciones de visibilidad del satélite
       <hr>
       <input type="radio" name="q24" value="c">c- a y b son correctas
     </div>
     <div class="borde">
       <h4>25- ¿Qué es el GDoP?</h4>
       <hr>
-      <input type="radio" name="q25" value="a">a- Dilución Geométrica de la Precisión; suponiendo 4 satélites el GDop 6
+      <input type="radio" name="q25" value="a">a- Dilución Geométrica de la Precisión, suponiendo 4 satélites; el GDop 6
       es adecuado y bajo 6 no es deseado
       <hr>
       <input type="radio" name="q25" value="b">b- Cuando pasa la señal del satelite por la atmosfera se ve afectada por
@@ -377,7 +375,7 @@
       <input type="radio" name="q34" value="d">d- a y b son correctas
     </div>
     <div class="borde">
-      <h4>35- ¿Cúales son las características de la técnica "Navegación" en posicionamiento por satélite</h4>
+      <h4>35- ¿Cúales son las características de la técnica "Navegación" en posicionamiento por satélite?</h4>
       <hr>
       <input type="radio" name="q35" value="a">a- Determina posición, velocidad y orientación de objetos, es en
       "Movimiento"
